[gd_scene load_steps=8 format=2]

[ext_resource path="res://image.png" type="Texture" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ground.tscn" type="PackedScene" id=3]
[ext_resource path="res://environment/ObstacleSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://World.gd" type="Script" id=5]
[ext_resource path="res://ui/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://environment/obstacle.tscn" type="PackedScene" id=8]

[node name="World" type="Node2D"]
script = ExtResource( 5 )

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="Background" type="Sprite" parent="."]
position = Vector2( -32, -39 )
scale = Vector2( 2.3927, 1.55606 )
texture = ExtResource( 1 )
centered = false

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 134, 146 )
rotation = 0.0483891
gravity_scale = 4.0
FLAP_FORCE = -180

[node name="ObstacleSpawner" parent="." instance=ExtResource( 4 )]
position = Vector2( 800, 0 )

[node name="obstacle" parent="." instance=ExtResource( 8 )]
position = Vector2( 36, 185 )

[node name="Ground" parent="." instance=ExtResource( 3 )]
position = Vector2( 1, 689 )

[node name="Sprite" parent="Ground" index="0"]
position = Vector2( 28, -119 )
scale = Vector2( 1.03807, 0.495327 )

[node name="CollisionShape2D" parent="Ground" index="1"]
position = Vector2( 538, -43 )

[node name="CollisionShape2D" parent="Ground/DeathZone" index="0"]
position = Vector2( 535, -40 )

[connection signal="died" from="Player" to="." method="_on_Player_died"]
[connection signal="body_entered" from="Ground/DeathZone" to="." method="_on_DeathZone_body_entered"]

[editable path="Ground"]
